# o-clip

./: .gitignore  Cargo.toml  README.md  fast-copy.rar
app/: Cargo.toml
app/src/: main.rs  ui.html
core/: Cargo.toml
core/src/: config.rs  entry_manager.rs  file_transfer.rs  lib.rs  store.rs  sync.rs
core/src/clipboard/: mod.rs  monitor.rs  monitor_mac.rs  reader.rs  writer.rs
gui/: Cargo.toml  build.rs  o-clip-gui.manifest  o-clip-gui.rc
gui/src/: app.rs  controls.rs  main.rs  theme.rs
macos/: Info.plist  OClipApp.swift  build.sh
server/: Cargo.toml  Dockerfile  docker-compose.yml
server/src/: admin.rs  config.rs  file_store.rs  files.rs  lib.rs  main.rs  protocol.rs  rate_limit.rs  store.rs  ws.rs
server/tests/: integration.rs
src/: app.rs  config.rs  error.rs  file_transfer.rs  main.rs  store.rs  sync.rs  tui.rs  window.rs
src/clipboard/: content.rs  mod.rs  monitor.rs  monitor_mac.rs  reader.rs
tui/: Cargo.toml
tui/src/: app.rs  app_legacy.rs  config.rs  main.rs  tui.rs
