[package]
name = "o-clip"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
ratatui = "0.29"
ratatui-image = { version = "4", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
rustls = "0.23"
rustls-native-certs = "0.8"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
]
