[workspace]
members = ["core", "tui", "gui", "server"]
default-members = ["core", "tui", "server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true        # Remove debug info & symbols (~3-4 MB savings)
lto = true           # Link-time optimization (merges + eliminates dead code)
codegen-units = 1    # Better optimization (slower compile)
opt-level = "z"      # Optimize for size instead of speed


[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
ratatui = "0.29"
ratatui-image = { version = "4", default-features = false, features = ["crossterm", "image-defaults"] }
image = { version = "0.25", default-features = false, features = [
    "png", "jpeg", "gif", "bmp", "webp", "ico", "tiff",
] }
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
rustls = "0.23"
rustls-native-certs = "0.8"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "json"] }
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }

# GUI (Windows-only)
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"

# Platform-specific
objc2 = "0.6"
objc2-foundation = "0.3"
libc = "0.2"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
