[package]
name = "o-clip-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "o-clip-app"
path = "src/main.rs"

[dependencies]
o-clip-core = { path = "../core" }
tao = "0.30"
wry = "0.44"
tray-icon = "0.17"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
