[package]
name = "o-clip-core"
version.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
directories.workspace = true
futures-util.workspace = true
image.workspace = true
mime_guess.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
toml.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-foundation.workspace = true
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
