[package]
name = "o-clip-gui"
version.workspace = true
edition.workspace = true

[dependencies]
o-clip-core = { path = "../core" }
chrono.workspace = true
directories.workspace = true
image.workspace = true
sha2.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true


[target.'cfg(windows)'.dependencies]
native-windows-gui.workspace = true
native-windows-derive.workspace = true
windows.workspace = true

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2"
