[package]
name = "o-clip-tui"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
directories.workspace = true
image.workspace = true
o-clip-core = { path = "../core" }
ratatui.workspace = true
ratatui-image.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
